--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <a class="project-link" href="projects/dodger/dodger.html">Dodger</a>
           <a class="project-link" href="projects/tetris/tetris.html">Tetris</a>
           <a class="project-link" href="projects/minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="projects/turt/turt.html">Turt</a>
           <a class="project-link" href="projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
           <a class="project-link" href="projects/calc/calc.html">Calc</a>
           <a class="project-link" href="projects/textfighter/textfighter.html">Text Fighter</a>
@@ -76,6 +77,15 @@
               <span class="project_desc">Classic Puzzler</span>
             </div>
             <img src="projects/minesweeper/minesweeper.png"></img>
+          </a>
+        </div>
+        <div class="content_container project_container">
+          <a href="projects/turt/turt.html">
+            <div class="project-desc-container">
+              <span class="project_name">Turt</span>
+              <span class="project_desc">Discord Moderation Bot</span>
+            </div>
+            <img src="projects/turt/turt.png"></img>
           </a>
         </div>
         <div class="content_container project_container">
