--- a/projects/turt/turt.html
+++ b/projects/turt/turt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Talk - Sean Johnson</title>
+    <title>Turt - Sean Johnson</title>
     <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
     <script type="text/javascript" src="../../stickynav.js"></script>
     <link rel="stylesheet" href="../../navbar.css"></link>
@@ -44,12 +44,12 @@
     		}
   		}</script>
     <div id="primary">
-      <h2 id="project-name">Talk</h2>
+      <h2 id="project-name">Turt</h2>
       <div class="content-container" id="intro">
-        <a href="https://github.com/seanmjohns/Talk">
-          <img id="project-img" src="talk.png"></img>
+        <a href="https://github.com/Things-N-Stuff/Turt">
+          <img id="project-img" src="turt.png"></img>
         </a>
-        <span id="project-desc">Talk is a simple server based chat system. Users communicate on a linux and macos only text-based environment. There is no running dedicated server, so if you wish to use it, you must run a server yourself.</span>
+        <span id="project-desc">Turt is a simple Discord server moderation bot that works cross server. Turt has an easy to use elections system in which users vote on issues, which are then carried out by server admins. Turt also has a warning system in which the accumulative severity of the warnings will result in bans with an increased period of time.</span>
       </div>
       <div id="technical-info">
         <div class="content-container" id="download">
@@ -57,7 +57,7 @@
           <div class="container-body">
             <div id="source">
               <span id="source-header">Source</span>
-              <a href="https://github.com/seanmjohns/Talk/releases">Github</a>
+              <a href="https://github.com/Things-N-Stuff/Turt/releases">Github</a>
             </div>
             <div id="precompiled">
               <span id="precompiled-header">Compiled</span>
@@ -69,8 +69,8 @@
           <span class="subheader" id="requirements-header">Requirements</span>
           <div class="container-body">
             <ul>
-              <li>Linux or MacOs</li>
-              <li>ncurses</li>
+              <li>At Least python3.6</li>
+              <li>discord.py</li>
             </ul>
           </div>
         </div>
@@ -82,12 +82,14 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" src="gallery/users.png"></img>
-          <img class="gallery-image" src="gallery/help.png"></img>
-          <img class="gallery-image" src="gallery/makeroom.png"></img>
-          <img class="gallery-image" src="gallery/newroom.png"></img>
-          <img class="gallery-image" src="gallery/namechange.png"></img>
-          <img class="gallery-image" src="gallery/leave.png"></img>
+          <img class="gallery-image" src="gallery/set_link_only.png"></img>
+          <img class="gallery-image" src="gallery/.DS_Store"></img>
+          <img class="gallery-image" src="gallery/direct_message_warn.png"></img>
+          <img class="gallery-image" src="gallery/warned.png"></img>
+          <img class="gallery-image" src="gallery/direct_message_banned.png"></img>
+          <img class="gallery-image" src="gallery/set_election_channel.png"></img>
+          <img class="gallery-image" src="gallery/banned_for_warnings.png"></img>
+          <img class="gallery-image" src="gallery/election.png"></img>
           <span id="no-images">It looks like we have no images for this project.</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
