--- a/projects/tetris/tetris.html
+++ b/projects/tetris/tetris.html
@@ -18,6 +18,7 @@
           <a class="project-link" href="../../projects/dodger/dodger.html">Dodger</a>
           <a class="project-link" href="../../projects/tetris/tetris.html">Tetris</a>
           <a class="project-link" href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
+          <a class="project-link" href="../../projects/turt/turt.html">Turt</a>
           <a class="project-link" href="../../projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
           <a class="project-link" href="../../projects/calc/calc.html">Calc</a>
           <a class="project-link" href="../../projects/textfighter/textfighter.html">Text Fighter</a>
