Made the turt description have correct grammar

--- a/projects/turt/turt.html
+++ b/projects/turt/turt.html
@@ -49,7 +49,7 @@
         <a href="https://github.com/Things-N-Stuff/Turt">
           <img id="project-img" src="turt.png"></img>
         </a>
-        <span id="project-desc">Turt is a simple Discord server moderation bot that works cross server. Turt has an easy to use elections system in which users vote on issues, which are then carried out by server admins. Turt also has a warning system in which the accumulative severity of the warnings will result in bans with an increased period of time.</span>
+        <span id="project-desc">Turt is a simple Discord server moderation bot that works cross server. Turt has an easy to use elections system in which users vote on issues, which are then carried out by server admins. Turt also has a warning system in which the accumulative severity of the warnings will result in temporary bans with increased periods of time.</span>
       </div>
       <div id="technical-info">
         <div class="content-container" id="download">
