--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <a class="project-link" href="projects/turt/turt.html">Turt</a>
           <a class="project-link" href="projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
           <a class="project-link" href="projects/calc/calc.html">Calc</a>
+          <a class="project-link" href="projects/pysics/pysics.html">Pysics</a>
           <a class="project-link" href="projects/textfighter/textfighter.html">Text Fighter</a>
           <a class="project-link" href="projects/talk/talk.html">Talk</a>
         </div>
@@ -104,6 +105,15 @@
               <span class="project_desc">Terminal Calculator</span>
             </div>
             <img src="projects/calc/calc.png"></img>
+          </a>
+        </div>
+        <div class="content_container project_container">
+          <a href="projects/pysics/pysics.html">
+            <div class="project-desc-container">
+              <span class="project_name">Pysics</span>
+              <span class="project_desc">Python Physics Engine</span>
+            </div>
+            <img src="projects/pysics/pysics.png"></img>
           </a>
         </div>
         <div class="content_container project_container">
