--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
           <a class="project-link" href="projects/turt/turt.html">Turt</a>
           <a class="project-link" href="projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
           <a class="project-link" href="projects/calc/calc.html">Calc</a>
+          <a class="project-link" href="projects/pysics/pysics.html">Pysics</a>
           <a class="project-link" href="projects/textfighter/textfighter.html">Text Fighter</a>
           <a class="project-link" href="projects/talk/talk.html">Talk</a>
         </div>
