--- a/projects/pysics/pysics.html
+++ b/projects/pysics/pysics.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dodger - Sean Johnson</title>
+    <title>Pysics - Sean Johnson</title>
     <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
     <script type="text/javascript" src="../../stickynav.js"></script>
     <link rel="stylesheet" href="../../navbar.css"></link>
@@ -45,12 +45,12 @@
     		}
   		}</script>
     <div id="primary">
-      <h2 id="project-name">Dodger</h2>
+      <h2 id="project-name">Pysics</h2>
       <div class="content-container" id="intro">
-        <a href="https://github.com/seanmjohns/Dodger">
-          <img id="project-img" src="dodger.png"></img>
+        <a href="https://github.com/seanmjohns/pysics">
+          <img id="project-img" src="pysics.png"></img>
         </a>
-        <span id="project-desc">Dodger is a game that puts the player, a green ball, in a field where an endless onslaught of lethal red squares races toward the top of the screen. The goal is to survive as long as possible.</span>
+        <span id="project-desc">A Physics Engine created for python games that allows developers to accurately control time (in both directions) that does not rely on cpu time. Instead, developers manually (although simply) pass time by ticking universes or individual objects within universes.</span>
       </div>
       <div id="technical-info">
         <div class="content-container" id="download">
@@ -58,11 +58,11 @@
           <div class="container-body">
             <div id="source">
               <span id="source-header">Source</span>
-              <a href="https://github.com/seanmjohns/Dodger/releases">Github</a>
+              <a href="https://github.com/seanmjohns/pysics/releases">Github</a>
             </div>
             <div id="precompiled">
               <span id="precompiled-header">Compiled</span>
-              <a href="https://seanmjohns.github.io/dodger/dodger-1.3.jar">dodger-1.3.jar</a>
+              <a>-</a>
             </div>
           </div>
         </div>
@@ -70,7 +70,7 @@
           <span class="subheader" id="requirements-header">Requirements</span>
           <div class="container-body">
             <ul>
-              <li>Java 11</li>
+              <li>python 3.6</li>
             </ul>
           </div>
         </div>
@@ -82,12 +82,10 @@
           <div id="image-number-container">
             <span id="image-number">0 / 0</span>
           </div>
-          <img class="gallery-image" src="gallery/ingame.png"></img>
-          <img class="gallery-image" src="gallery/home.png"></img>
-          <img class="gallery-image" src="gallery/difficulties.png"></img>
-          <img class="gallery-image" src="gallery/Player_Lost.png"></img>
-          <img class="gallery-image" src="gallery/start.png"></img>
-          <img class="gallery-image" src="gallery/Paused.png"></img>
+          <img class="gallery-image" src="gallery/ball.png"></img>
+          <img class="gallery-image" src="gallery/ball2.png"></img>
+          <img class="gallery-image" src="gallery/stickman2.png"></img>
+          <img class="gallery-image" src="gallery/stickman.png"></img>
           <span id="no-images">It looks like we have no images for this project.</span>
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
