Added support for links. Added link to pysics documentation

--- a/projects/turt/turt.html
+++ b/projects/turt/turt.html
@@ -35,19 +35,19 @@
     </div>
     <div id="spacer"></div>
     <script>function toggle() {
-			var e = document.getElementById("dropdown-content");
-			e.classList.toggle("projects-dd-content-shown");
-		}
+            var e = document.getElementById("dropdown-content");
+            e.classList.toggle("projects-dd-content-shown");
+        }
 
-		window.onclick = function(event) {
-  			if (event.target != document.getElementById("projects-dropdown-button")) {
-				document.getElementsByClassName("projects-dd-content")[0].classList.remove("projects-dd-content-shown");
-    		}
-  		}</script>
+        window.onclick = function(event) {
+              if (event.target != document.getElementById("projects-dropdown-button")) {
+                document.getElementsByClassName("projects-dd-content")[0].classList.remove("projects-dd-content-shown");
+            }
+          }</script>
     <div id="primary">
       <h2 id="project-name">Turt</h2>
       <div class="content-container" id="intro">
-        <a href="https://github.com/Things-N-Stuff/Turt">
+        <a href="https://github.com/Things-N-Stuff/Turt/">
           <img id="project-img" src="turt.png"></img>
         </a>
         <span id="project-desc">Turt is a simple Discord server moderation bot that works across multiple servers. Turt has an easy to use elections system in which users vote on issues, which are then carried out by server admins. Turt also has a warning system in which the accumulative severity of the warnings will result in temporary bans with increased periods of time.</span>
@@ -58,7 +58,7 @@
           <div class="container-body">
             <div id="source">
               <span id="source-header">Source</span>
-              <a href="https://github.com/Things-N-Stuff/Turt/releases">Github</a>
+              <a href="https://github.com/Things-N-Stuff/Turt//releases">Github</a>
             </div>
             <div id="precompiled">
               <span id="precompiled-header">Compiled</span>
@@ -74,6 +74,16 @@
               <li>discord.py</li>
             </ul>
           </div>
+        </div>
+      </div>
+      <div class="content-container" id="links">
+        <span class="subheader" id="link-header">Links</span>
+        <div class="container-body">
+          <ul>
+            <li>
+              <a href="https://github.com/Things-N-Stuff/Turt#server-permissions">Server Permissions Recommendations for using Turt</a>
+            </li>
+          </ul>
         </div>
       </div>
       <h2 id="gallery-header">Gallery</h2>
