--- a/projects/pysics/pysics.html
+++ b/projects/pysics/pysics.html
@@ -35,15 +35,15 @@
     </div>
     <div id="spacer"></div>
     <script>function toggle() {
-			var e = document.getElementById("dropdown-content");
-			e.classList.toggle("projects-dd-content-shown");
-		}
+            var e = document.getElementById("dropdown-content");
+            e.classList.toggle("projects-dd-content-shown");
+        }
 
-		window.onclick = function(event) {
-  			if (event.target != document.getElementById("projects-dropdown-button")) {
-				document.getElementsByClassName("projects-dd-content")[0].classList.remove("projects-dd-content-shown");
-    		}
-  		}</script>
+        window.onclick = function(event) {
+              if (event.target != document.getElementById("projects-dropdown-button")) {
+                document.getElementsByClassName("projects-dd-content")[0].classList.remove("projects-dd-content-shown");
+            }
+          }</script>
     <div id="primary">
       <h2 id="project-name">Pysics</h2>
       <div class="content-container" id="intro">
@@ -73,6 +73,16 @@
               <li>python 3.6</li>
             </ul>
           </div>
+        </div>
+      </div>
+      <div class="content-container" id="links">
+        <span class="subheader" id="link-header">Links</span>
+        <div class="container-body">
+          <ul>
+            <li>
+              <a href="./docs/index.html">documentation</a>
+            </li>
+          </ul>
         </div>
       </div>
       <h2 id="gallery-header">Gallery</h2>
