Fixed relative image paths for projects

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </a>
               </li>
             </ul>
-            <div id="email">seanmjohns1@gmail.com</div>
+            <div id="contact-email">seanmjohns1@gmail.com</div>
           </div>
         </div>
         <div id="footer-right">
@@ -164,31 +164,31 @@
             <span id="footer-projects-header">Projects</span>
             <ul id="footer-projects-list">
               <li>
-                <a href="../../projects/dodger/dodger.html">Dodger</a>
+                <a href="projects/dodger/dodger.html">Dodger</a>
               </li>
               <li>
-                <a href="../../projects/tetris/tetris.html">Tetris</a>
+                <a href="projects/tetris/tetris.html">Tetris</a>
               </li>
               <li>
-                <a href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
+                <a href="projects/minesweeper/minesweeper.html">Minesweeper</a>
               </li>
               <li>
-                <a href="../../projects/turt/turt.html">Turt</a>
+                <a href="projects/turt/turt.html">Turt</a>
               </li>
               <li>
-                <a href="../../projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
+                <a href="projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
               </li>
               <li>
-                <a href="../../projects/calc/calc.html">Calc</a>
+                <a href="projects/calc/calc.html">Calc</a>
               </li>
               <li>
-                <a href="../../projects/pysics/pysics.html">Pysics</a>
+                <a href="projects/pysics/pysics.html">Pysics</a>
               </li>
               <li>
-                <a href="../../projects/textfighter/textfighter.html">Text Fighter</a>
+                <a href="projects/textfighter/textfighter.html">Text Fighter</a>
               </li>
               <li>
-                <a href="../../projects/talk/talk.html">Talk</a>
+                <a href="projects/talk/talk.html">Talk</a>
               </li>
             </ul>
           </div>
