--- a/projects/turt/turt.html
+++ b/projects/turt/turt.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="../../stickynav.js"></script>
     <link rel="stylesheet" href="../../navbar.css"></link>
     <link rel="stylesheet" href="../../project.css"></link>
+    <link rel="stylesheet" href="../../footer.css"></link>
   </head>
   <body>
     <div>
@@ -105,6 +106,64 @@
         </div>
         <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
         <script type="text/javascript" src="../../gallery.js"></script>
+      </div>
+    </div>
+    <div id="footer">
+      <div id="centered">
+        <div id="footer-left">
+          <div id="footer-picture">
+            <img id="footer-image" src="../../images/github-profile.png" width="75px" height="75px" />
+          </div>
+          <div id="footer-contact">
+            <ul id="footer-contact-images">
+              <li>
+                <a href="https://www.linkedin.com/in/seanmjohns1/" width="75px" height="75px">
+                  <img id="contact-linkedin-image" alt="linkedin" class="contact-image" src="../../images/Li-In-Bug.png" />
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/seanmjohns" width="75px" height="75px">
+                  <img id="contact-github-image" alt="github" class="contact-image" src="../../images/github-logo.png" />
+                </a>
+              </li>
+            </ul>
+            <div id="contact-email">seanmjohns1@gmail.com</div>
+          </div>
+        </div>
+        <div id="footer-right">
+          <div id="footer-projects">
+            <span id="footer-projects-header">Projects</span>
+            <ul id="footer-projects-list">
+              <li>
+                <a href="../../projects/dodger/dodger.html">Dodger</a>
+              </li>
+              <li>
+                <a href="../../projects/tetris/tetris.html">Tetris</a>
+              </li>
+              <li>
+                <a href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
+              </li>
+              <li>
+                <a href="../../projects/turt/turt.html">Turt</a>
+              </li>
+              <li>
+                <a href="../../projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
+              </li>
+              <li>
+                <a href="../../projects/calc/calc.html">Calc</a>
+              </li>
+              <li>
+                <a href="../../projects/pysics/pysics.html">Pysics</a>
+              </li>
+              <li>
+                <a href="../../projects/textfighter/textfighter.html">Text Fighter</a>
+              </li>
+              <li>
+                <a href="../../projects/talk/talk.html">Talk</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </body>
