--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
     <script type="text/javascript" src="stickynav.js"></script>
     <link rel="stylesheet" href="navbar.css"></link>
+    <link rel="stylesheet" href="footer.css"></link>
     <link rel="stylesheet" href="contact.css"></link>
   </head>
   <body>
@@ -35,15 +36,15 @@
     </div>
     <div id="spacer"></div>
     <script>function toggle() {
-			var e = document.getElementById("dropdown-content");
-			e.classList.toggle("projects-dd-content-shown");
-		}
+            var e = document.getElementById("dropdown-content");
+            e.classList.toggle("projects-dd-content-shown");
+        }
 
-		window.onclick = function(event) {
-  			if (event.target != document.getElementById("projects-dropdown-button")) {
-				document.getElementsByClassName("projects-dd-content")[0].classList.remove("projects-dd-content-shown");
-    		}
-  		}</script>
+        window.onclick = function(event) {
+              if (event.target != document.getElementById("projects-dropdown-button")) {
+                document.getElementsByClassName("projects-dd-content")[0].classList.remove("projects-dd-content-shown");
+            }
+          }</script>
     <div id="primary">
       <h2 id="contact-header">Contact</h2>
       <div class="content-container" id="github" title="github">
@@ -57,10 +58,68 @@
         <span class="notes">Email me at <strong>seanmjohns1@gmail.com</strong>. I check my email often, so it is likely you will be able to get a hold of me.</span>
       </div>
       <div class="content-container" id="linkedin" title="linkedin">
-        <a href="https://linkedin.com/in/seanmjohns1">
+        <a href="https://www.linkedin.com/in/seanmjohns1/">
           <img src="images/LI-In-Bug.png" id="linkedin-logo"></img>
         </a>
-        <span class="notes">Contact me through LinkedIn (<strong><a href="https://linkedin.com/in/seanmjohns1" class="intextlink">seanmjohns1</a></strong>).</span>
+        <span class="notes">Contact me through LinkedIn (<strong><a href="https://www.linkedin.com/in/seanmjohns1/" class="intextlink">seanmjohns1</a></strong>).</span>
+      </div>
+    </div>
+    <div id="footer">
+      <div id="centered">
+        <div id="footer-left">
+          <div id="footer-picture">
+            <img id="footer-image" src="images/github-profile.png" width="75px" height="75px" />
+          </div>
+          <div id="footer-contact">
+            <ul id="footer-contact-images">
+              <li>
+                <a href="https://www.linkedin.com/in/seanmjohns1/" width="75px" height="75px">
+                  <img id="contact-linkedin-image" alt="linkedin" class="contact-image" src="images/Li-In-Bug.png" />
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/seanmjohns" width="75px" height="75px">
+                  <img id="contact-github-image" alt="github" class="contact-image" src="images/github-logo.png" />
+                </a>
+              </li>
+            </ul>
+            <div id="contact-email">seanmjohns1@gmail.com</div>
+          </div>
+        </div>
+        <div id="footer-right">
+          <div id="footer-projects">
+            <span id="footer-projects-header">Projects</span>
+            <ul id="footer-projects-list">
+              <li>
+                <a href="projects/dodger/dodger.html">Dodger</a>
+              </li>
+              <li>
+                <a href="projects/tetris/tetris.html">Tetris</a>
+              </li>
+              <li>
+                <a href="projects/minesweeper/minesweeper.html">Minesweeper</a>
+              </li>
+              <li>
+                <a href="projects/turt/turt.html">Turt</a>
+              </li>
+              <li>
+                <a href="projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
+              </li>
+              <li>
+                <a href="projects/calc/calc.html">Calc</a>
+              </li>
+              <li>
+                <a href="projects/pysics/pysics.html">Pysics</a>
+              </li>
+              <li>
+                <a href="projects/textfighter/textfighter.html">Text Fighter</a>
+              </li>
+              <li>
+                <a href="projects/talk/talk.html">Talk</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
   </body>
