fixed linkedin logo image name issue

--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
             <ul id="footer-contact-images">
               <li>
                 <a href="https://www.linkedin.com/in/seanmjohns1/" width="75px" height="75px">
-                  <img id="contact-linkedin-image" alt="linkedin" class="contact-image" src="images/Li-In-Bug.png" />
+                  <img id="contact-linkedin-image" alt="linkedin" class="contact-image" src="images/LI-In-Bug.png" />
                 </a>
               </li>
               <li>
