--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         </div>
       </div>
     </div>
+    <div id="footer-spacer">
     <div id="footer">
       <div id="centered">
         <div id="footer-left">
