Added website source to the footer

--- a/projects/calc/calc.html
+++ b/projects/calc/calc.html
@@ -114,6 +114,9 @@
             </ul>
             <div id="contact-email">seanmjohns1@gmail.com</div>
           </div>
+          <div id="web-source">
+            <a id="source-link" href="https://github.com/seanmjohns/seanmjohns.github.io">source</a>
+          </div>
         </div>
         <div id="footer-right">
           <div id="footer-projects">
