--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <a href="https://www.linkedin.com/in/seanmjohns1/" title="linkedin">
           <img id="profile" src="images/github-profile.png" alt="github profile"></img>
         </a>
-        <span id="desc">I program for fun when I'm not overloaded with work from my high school classes. I am moderately fluent in Java, Python, C, C++, and Bash.</span>
+        <span id="desc">I program for fun when I'm not overloaded with work from my high school classes and part-time job. I am moderately fluent in Java, Python, C, C++, and Bash.</span>
       </div>
       <h2 id="projects_header">Projects</h2>
       <div id="projects">
