Project name headers now link to their project pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         </a>
         <span id="desc">I program for fun when I'm not overloaded with work from my high school classes. I am moderately fluent in Java, Python, C, C++, and Bash.</span>
       </div>
-      <h2 id="projects_header">Projects</h2>
+      <h2 id="projects_header">
+        <a href="https://github.com/seanmjohns?tab=repositories">Projects</a>
+      </h2>
       <div id="projects">
         <div class="content_container project_container">
           <a href="projects/dodger/dodger.html">
