--- a/projects/calc/calc.html
+++ b/projects/calc/calc.html
@@ -46,7 +46,9 @@
             }
           }</script>
     <div id="primary">
-      <h2 id="project-name">Calc</h2>
+      <h2 id="project-name">
+        <a href="https://github.com/seanmjohns/calc">Calc</a>
+      </h2>
       <div class="content-container" id="intro">
         <a href="https://github.com/seanmjohns/calc">
           <img id="project-img" src="calc.png"></img>
