--- a/projects/minesweeper/minesweeper.html
+++ b/projects/minesweeper/minesweeper.html
@@ -46,7 +46,9 @@
             }
           }</script>
     <div id="primary">
-      <h2 id="project-name">Minesweeper</h2>
+      <h2 id="project-name">
+        <a href="https://github.com/seanmjohns/Minesweeper">Minesweeper</a>
+      </h2>
       <div class="content-container" id="intro">
         <a href="https://github.com/seanmjohns/Minesweeper">
           <img id="project-img" src="minesweeper.png"></img>
