--- a/projects/pysics/pysics.html
+++ b/projects/pysics/pysics.html
@@ -46,7 +46,9 @@
             }
           }</script>
     <div id="primary">
-      <h2 id="project-name">Pysics</h2>
+      <h2 id="project-name">
+        <a href="https://github.com/seanmjohns/pysics">Pysics</a>
+      </h2>
       <div class="content-container" id="intro">
         <a href="https://github.com/seanmjohns/pysics">
           <img id="project-img" src="pysics.png"></img>
