--- a/projects/sub_trouble/sub_trouble.html
+++ b/projects/sub_trouble/sub_trouble.html
@@ -46,7 +46,9 @@
             }
           }</script>
     <div id="primary">
-      <h2 id="project-name">Sub Trouble</h2>
+      <h2 id="project-name">
+        <a href="https://github.com/seanmjohns/Submarine-Trouble">Sub Trouble</a>
+      </h2>
       <div class="content-container" id="intro">
         <a href="https://github.com/seanmjohns/Submarine-Trouble">
           <img id="project-img" src="sub_trouble.png"></img>
