--- a/projects/talk/talk.html
+++ b/projects/talk/talk.html
@@ -46,7 +46,9 @@
             }
           }</script>
     <div id="primary">
-      <h2 id="project-name">Talk</h2>
+      <h2 id="project-name">
+        <a href="https://github.com/seanmjohns/Talk">Talk</a>
+      </h2>
       <div class="content-container" id="intro">
         <a href="https://github.com/seanmjohns/Talk">
           <img id="project-img" src="talk.png"></img>
