--- a/projects/tetris/tetris.html
+++ b/projects/tetris/tetris.html
@@ -46,7 +46,9 @@
             }
           }</script>
     <div id="primary">
-      <h2 id="project-name">Tetris</h2>
+      <h2 id="project-name">
+        <a href="https://github.com/seanmjohns/Tetris">Tetris</a>
+      </h2>
       <div class="content-container" id="intro">
         <a href="https://github.com/seanmjohns/Tetris">
           <img id="project-img" src="tetris.png"></img>
