--- a/projects/textfighter/textfighter.html
+++ b/projects/textfighter/textfighter.html
@@ -46,7 +46,9 @@
             }
           }</script>
     <div id="primary">
-      <h2 id="project-name">Text Fighter</h2>
+      <h2 id="project-name">
+        <a href="https://github.com/seanmjohns/Text-Fighter">Text Fighter</a>
+      </h2>
       <div class="content-container" id="intro">
         <a href="https://github.com/seanmjohns/Text-Fighter">
           <img id="project-img" src="textfighter.png"></img>
