--- a/projects/dodger/dodger.html
+++ b/projects/dodger/dodger.html
@@ -46,7 +46,9 @@
             }
           }</script>
     <div id="primary">
-      <h2 id="project-name">Dodger</h2>
+      <h2 id="project-name">
+        <a href="https://github.com/seanmjohns/Dodger">Dodger</a>
+      </h2>
       <div class="content-container" id="intro">
         <a href="https://github.com/seanmjohns/Dodger">
           <img id="project-img" src="dodger.png"></img>
