--- a/projects/turt/turt.html
+++ b/projects/turt/turt.html
@@ -46,7 +46,9 @@
             }
           }</script>
     <div id="primary">
-      <h2 id="project-name">Turt</h2>
+      <h2 id="project-name">
+        <a href="https://github.com/Things-N-Stuff/Turt/">Turt</a>
+      </h2>
       <div class="content-container" id="intro">
         <a href="https://github.com/Things-N-Stuff/Turt/">
           <img id="project-img" src="turt.png"></img>
