Added link to the textfighter wiki on github

--- a/projects/textfighter/textfighter.html
+++ b/projects/textfighter/textfighter.html
@@ -83,6 +83,9 @@
         <div class="container-body">
           <ul>
             <li>
+              <a href="https://github.com/seanmjohns/Text-Fighter/wiki">Text Fighter Wiki</a>
+            </li>
+            <li>
               <a href="./docs/index.html">Game Engine Documentation</a>
             </li>
           </ul>
