--- a/projects/tetris/tetris.html
+++ b/projects/tetris/tetris.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Tetris - Sean Johnson</title>
-    <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
-    <script type="text/javascript" src="../../stickynav.js"></script>
-    <link rel="stylesheet" href="../../navbar.css"></link>
-    <link rel="stylesheet" href="../../project.css"></link>
-    <link rel="stylesheet" href="../../footer.css"></link>
-  </head>
-  <body>
-    <div>
-      <h1 id="name">Sean Johnson</h1>
+<head>
+  <title>Tetris - Sean Johnson</title>
+  <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
+  <script type="text/javascript" src="../../stickynav.js"></script>
+  <link rel="stylesheet" href="../../navbar.css"></link>
+  <link rel="stylesheet" href="../../project.css"></link>
+  <link rel="stylesheet" href="../../footer.css"></link>
+</head>
+<div>
+  <h1 id="name">Sean Johnson</h1>
+</div>
+<div id="navbar">
+  <div id="projects-dropdown" class="nav">
+    <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
+    <div class="projects-dd-content" id="dropdown-content">
+      <a class="project-link" href="../../projects/dodger/dodger.html">Dodger</a>
+      <a class="project-link" href="../../projects/tetris/tetris.html">Tetris</a>
+      <a class="project-link" href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
+      <a class="project-link" href="../../projects/turt/turt.html">Turt</a>
+      <a class="project-link" href="../../projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
+      <a class="project-link" href="../../projects/calc/calc.html">Calc</a>
+      <a class="project-link" href="../../projects/pysics/pysics.html">Pysics</a>
+      <a class="project-link" href="../../projects/textfighter/textfighter.html">Text Fighter</a>
+      <a class="project-link" href="../../projects/talk/talk.html">Talk</a>
     </div>
-    <div id="navbar">
-      <div id="projects-dropdown" class="nav">
-        <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
-        <div class="projects-dd-content" id="dropdown-content">
-          <a class="project-link" href="../../projects/dodger/dodger.html">Dodger</a>
-          <a class="project-link" href="../../projects/tetris/tetris.html">Tetris</a>
-          <a class="project-link" href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
-          <a class="project-link" href="../../projects/turt/turt.html">Turt</a>
-          <a class="project-link" href="../../projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
-          <a class="project-link" href="../../projects/calc/calc.html">Calc</a>
-          <a class="project-link" href="../../projects/pysics/pysics.html">Pysics</a>
-          <a class="project-link" href="../../projects/textfighter/textfighter.html">Text Fighter</a>
-          <a class="project-link" href="../../projects/talk/talk.html">Talk</a>
-        </div>
-      </div>
-      <div class="nav">
-        <a class="nav-button" href="../../index.html">Home</a>
-      </div>
-      <div class="nav">
-        <a class="nav-button" href="../../contact.html">Contact</a>
-      </div>
-    </div>
-    <div id="spacer"></div>
-    <script>function toggle() {
+  </div>
+  <div class="nav">
+    <a class="nav-button" href="../../index.html">Home</a>
+  </div>
+  <div class="nav">
+    <a class="nav-button" href="../../contact.html">Contact</a>
+  </div>
+</div>
+<div id="spacer"></div>
+<script>function toggle() {
             var e = document.getElementById("dropdown-content");
             e.classList.toggle("projects-dd-content-shown");
         }
@@ -45,119 +43,117 @@
                 document.getElementsByClassName("projects-dd-content")[0].classList.remove("projects-dd-content-shown");
             }
           }</script>
-    <div id="primary">
-      <h2 id="project-name">
-        <a href="https://github.com/seanmjohns/Tetris">Tetris</a>
-      </h2>
-      <div class="content-container" id="intro">
-        <a href="https://github.com/seanmjohns/Tetris">
-          <img id="project-img" src="tetris.png"></img>
-        </a>
-        <span id="project-desc">This game is a clone of the original Tetris franchise. The player must fill as many lines as possible before the blocks stack to the top of the playing field.</span>
-      </div>
-      <div id="technical-info">
-        <div class="content-container" id="download">
-          <span class="subheader" id="download-header">Download</span>
-          <div class="container-body">
-            <div id="source">
-              <span id="source-header">Source</span>
-              <a href="https://github.com/seanmjohns/Tetris/releases">Github</a>
-            </div>
-            <div id="precompiled">
-              <span id="precompiled-header">Compiled</span>
-              <a href="https://seanmjohns.github.io/tetris/tetris-1.3.jar">tetris-1.3.jar</a>
-            </div>
-          </div>
+<div id="primary">
+  <h2 id="project-name">
+    <a href="https://github.com/seanmjohns/Tetris">Tetris</a>
+  </h2>
+  <div class="content-container" id="intro">
+    <a href="https://github.com/seanmjohns/Tetris">
+      <img id="project-img" src="tetris.png"></img>
+    </a>
+    <span id="project-desc">This game is a clone of the original Tetris franchise. The player must fill as many lines as possible before the blocks stack to the top of the playing field.</span>
+  </div>
+  <div id="technical-info">
+    <div class="content-container" id="download">
+      <span class="subheader" id="download-header">Download</span>
+      <div class="container-body">
+        <div id="source">
+          <span id="source-header">Source</span>
+          <a href="https://github.com/seanmjohns/Tetris/releases">Github</a>
         </div>
-        <div class="content-container" id="requirements">
-          <span class="subheader" id="requirements-header">Requirements</span>
-          <div class="container-body">
-            <ul>
-              <li>java 11</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <h2 id="gallery-header">Gallery</h2>
-      <div class="content-container" id="gallery">
-        <button id="left-button" class="gallery-button" onclick="goLeft()"> &lt; </button>
-        <div id="image-container">
-          <div id="image-number-container">
-            <span id="image-number">0 / 0</span>
-          </div>
-          <img class="gallery-image" src="gallery/ingame2.png"></img>
-          <img class="gallery-image" src="gallery/starting.png"></img>
-          <img class="gallery-image" src="gallery/juststarted.png"></img>
-          <img class="gallery-image" src="gallery/ingame.png"></img>
-          <img class="gallery-image" src="gallery/juststarted2.png"></img>
-          <img class="gallery-image" src="gallery/gameover.png"></img>
-          <img class="gallery-image" src="gallery/paused.png"></img>
-          <span id="no-images">It looks like we have no images for this project.</span>
-        </div>
-        <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
-        <script type="text/javascript" src="../../gallery.js"></script>
-      </div>
-    </div>
-    <div id="footer">
-      <div id="centered">
-        <div id="footer-left">
-          <div id="footer-picture">
-            <img id="footer-image" src="../../images/github-profile.png" width="75px" height="75px" />
-          </div>
-          <div id="footer-contact">
-            <ul id="footer-contact-images">
-              <li>
-                <a href="https://www.linkedin.com/in/seanmjohns1/" width="75px" height="75px">
-                  <img id="contact-linkedin-image" alt="linkedin" class="contact-image" src="../../images/black-linkedin-logo.png" />
-                </a>
-              </li>
-              <li>
-                <a href="https://github.com/seanmjohns" width="75px" height="75px">
-                  <img id="contact-github-image" alt="github" class="contact-image" src="../../images/github-logo.png" />
-                </a>
-              </li>
-            </ul>
-            <div id="contact-email">seanmjohns1@gmail.com</div>
-          </div>
-          <div id="web-source">
-            <a id="source-link" href="https://github.com/seanmjohns/seanmjohns.github.io">source</a>
-          </div>
-        </div>
-        <div id="footer-right">
-          <div id="footer-projects">
-            <span id="footer-projects-header">Projects</span>
-            <ul id="footer-projects-list">
-              <li>
-                <a href="../../projects/dodger/dodger.html">Dodger</a>
-              </li>
-              <li>
-                <a href="../../projects/tetris/tetris.html">Tetris</a>
-              </li>
-              <li>
-                <a href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
-              </li>
-              <li>
-                <a href="../../projects/turt/turt.html">Turt</a>
-              </li>
-              <li>
-                <a href="../../projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
-              </li>
-              <li>
-                <a href="../../projects/calc/calc.html">Calc</a>
-              </li>
-              <li>
-                <a href="../../projects/pysics/pysics.html">Pysics</a>
-              </li>
-              <li>
-                <a href="../../projects/textfighter/textfighter.html">Text Fighter</a>
-              </li>
-              <li>
-                <a href="../../projects/talk/talk.html">Talk</a>
-              </li>
-            </ul>
-          </div>
+        <div id="precompiled">
+          <span id="precompiled-header">Compiled</span>
+          <a href="https://seanmjohns.github.io/projects/tetris/tetris-1.3.jar">tetris-1.3.jar</a>
         </div>
       </div>
     </div>
-  </body>
-</html>
+    <div class="content-container" id="requirements">
+      <span class="subheader" id="requirements-header">Requirements</span>
+      <div class="container-body">
+        <ul>
+          <li>java 11</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <h2 id="gallery-header">Gallery</h2>
+  <div class="content-container" id="gallery">
+    <button id="left-button" class="gallery-button" onclick="goLeft()"> &lt; </button>
+    <div id="image-container">
+      <div id="image-number-container">
+        <span id="image-number">0 / 0</span>
+      </div>
+      <img class="gallery-image" src="gallery/ingame2.png"></img>
+      <img class="gallery-image" src="gallery/starting.png"></img>
+      <img class="gallery-image" src="gallery/juststarted.png"></img>
+      <img class="gallery-image" src="gallery/ingame.png"></img>
+      <img class="gallery-image" src="gallery/juststarted2.png"></img>
+      <img class="gallery-image" src="gallery/gameover.png"></img>
+      <img class="gallery-image" src="gallery/paused.png"></img>
+      <span id="no-images">It looks like we have no images for this project.</span>
+    </div>
+    <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
+    <script type="text/javascript" src="../../gallery.js"></script>
+  </div>
+</div>
+<div id="footer">
+  <div id="centered">
+    <div id="footer-left">
+      <div id="footer-picture">
+        <img id="footer-image" src="../../images/github-profile.png" width="75px" height="75px" />
+      </div>
+      <div id="footer-contact">
+        <ul id="footer-contact-images">
+          <li>
+            <a href="https://www.linkedin.com/in/seanmjohns1/" width="75px" height="75px">
+              <img id="contact-linkedin-image" alt="linkedin" class="contact-image" src="../../images/black-linkedin-logo.png" />
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/seanmjohns" width="75px" height="75px">
+              <img id="contact-github-image" alt="github" class="contact-image" src="../../images/github-logo.png" />
+            </a>
+          </li>
+        </ul>
+        <div id="contact-email">seanmjohns1@gmail.com</div>
+      </div>
+      <div id="web-source">
+        <a id="source-link" href="https://github.com/seanmjohns/seanmjohns.github.io">source</a>
+      </div>
+    </div>
+    <div id="footer-right">
+      <div id="footer-projects">
+        <span id="footer-projects-header">Projects</span>
+        <ul id="footer-projects-list">
+          <li>
+            <a href="../../projects/dodger/dodger.html">Dodger</a>
+          </li>
+          <li>
+            <a href="../../projects/tetris/tetris.html">Tetris</a>
+          </li>
+          <li>
+            <a href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
+          </li>
+          <li>
+            <a href="../../projects/turt/turt.html">Turt</a>
+          </li>
+          <li>
+            <a href="../../projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
+          </li>
+          <li>
+            <a href="../../projects/calc/calc.html">Calc</a>
+          </li>
+          <li>
+            <a href="../../projects/pysics/pysics.html">Pysics</a>
+          </li>
+          <li>
+            <a href="../../projects/textfighter/textfighter.html">Text Fighter</a>
+          </li>
+          <li>
+            <a href="../../projects/talk/talk.html">Talk</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
