Updated personal description to my new education status

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   <div id="projects-dropdown" class="nav">
     <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
     <div class="projects-dd-content" id="dropdown-content">
-      <a class="project-link" href="projects/dodger/dodger.html">Dodger</a>
-      <a class="project-link" href="projects/tetris/tetris.html">Tetris</a>
-      <a class="project-link" href="projects/minesweeper/minesweeper.html">Minesweeper</a>
       <a class="project-link" href="projects/turt/turt.html">Turt</a>
+      <a class="project-link" href="projects/dodger/dodger.html">Dodger</a>
+      <a class="project-link" href="projects/talk/talk.html">Talk</a>
       <a class="project-link" href="projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
       <a class="project-link" href="projects/calc/calc.html">Calc</a>
       <a class="project-link" href="projects/pysics/pysics.html">Pysics</a>
+      <a class="project-link" href="projects/minesweeper/minesweeper.html">Minesweeper</a>
       <a class="project-link" href="projects/textfighter/textfighter.html">Text Fighter</a>
-      <a class="project-link" href="projects/talk/talk.html">Talk</a>
+      <a class="project-link" href="projects/tetris/tetris.html">Tetris</a>
     </div>
   </div>
   <div class="nav">
@@ -48,12 +48,21 @@
     <a href="https://www.linkedin.com/in/seanmjohns1/" title="linkedin">
       <img id="profile" src="images/github-profile.png" alt="github profile"></img>
     </a>
-    <span id="desc">I program for fun when I'm not overloaded with work from my high school classes and part-time job. I am moderately fluent in Java, Python, C, C++, and Bash.</span>
+    <span id="desc">I am an incoming Georgia Institute of Technology student who will major in computer science. I have been programming since age ten, and I will continue to do so as a software engineer for the rest of my life. My current focus is around Systems and Architecture as well as Information Internetworks.</span>
   </div>
   <h2 id="projects_header">
     <a href="https://github.com/seanmjohns?tab=repositories">Projects</a>
   </h2>
   <div id="projects">
+    <div class="content_container project_container">
+      <a href="projects/turt/turt.html">
+        <div class="project-desc-container">
+          <span class="project_name">Turt</span>
+          <span class="project_desc">Discord Moderation Bot</span>
+        </div>
+        <img src="projects/turt/turt.png"></img>
+      </a>
+    </div>
     <div class="content_container project_container">
       <a href="projects/dodger/dodger.html">
         <div class="project-desc-container">
@@ -64,30 +73,12 @@
       </a>
     </div>
     <div class="content_container project_container">
-      <a href="projects/tetris/tetris.html">
+      <a href="projects/talk/talk.html">
         <div class="project-desc-container">
-          <span class="project_name">Tetris</span>
-          <span class="project_desc">Fast-paced Classic</span>
+          <span class="project_name">Talk</span>
+          <span class="project_desc">Client/Server Chat</span>
         </div>
-        <img src="projects/tetris/tetris.png"></img>
-      </a>
-    </div>
-    <div class="content_container project_container">
-      <a href="projects/minesweeper/minesweeper.html">
-        <div class="project-desc-container">
-          <span class="project_name">Minesweeper</span>
-          <span class="project_desc">Classic Puzzler</span>
-        </div>
-        <img src="projects/minesweeper/minesweeper.png"></img>
-      </a>
-    </div>
-    <div class="content_container project_container">
-      <a href="projects/turt/turt.html">
-        <div class="project-desc-container">
-          <span class="project_name">Turt</span>
-          <span class="project_desc">Discord Moderation Bot</span>
-        </div>
-        <img src="projects/turt/turt.png"></img>
+        <img src="projects/talk/talk.png"></img>
       </a>
     </div>
     <div class="content_container project_container">
@@ -118,6 +109,15 @@
       </a>
     </div>
     <div class="content_container project_container">
+      <a href="projects/minesweeper/minesweeper.html">
+        <div class="project-desc-container">
+          <span class="project_name">Minesweeper</span>
+          <span class="project_desc">Classic Puzzler</span>
+        </div>
+        <img src="projects/minesweeper/minesweeper.png"></img>
+      </a>
+    </div>
+    <div class="content_container project_container">
       <a href="projects/textfighter/textfighter.html">
         <div class="project-desc-container">
           <span class="project_name">Text Fighter</span>
@@ -127,12 +127,12 @@
       </a>
     </div>
     <div class="content_container project_container">
-      <a href="projects/talk/talk.html">
+      <a href="projects/tetris/tetris.html">
         <div class="project-desc-container">
-          <span class="project_name">Talk</span>
-          <span class="project_desc">Client/Server Chat</span>
+          <span class="project_name">Tetris</span>
+          <span class="project_desc">Fast-paced Classic</span>
         </div>
-        <img src="projects/talk/talk.png"></img>
+        <img src="projects/tetris/tetris.png"></img>
       </a>
     </div>
   </div>
@@ -167,16 +167,13 @@
         <span id="footer-projects-header">Projects</span>
         <ul id="footer-projects-list">
           <li>
+            <a href="projects/turt/turt.html">Turt</a>
+          </li>
+          <li>
             <a href="projects/dodger/dodger.html">Dodger</a>
           </li>
           <li>
-            <a href="projects/tetris/tetris.html">Tetris</a>
-          </li>
-          <li>
-            <a href="projects/minesweeper/minesweeper.html">Minesweeper</a>
-          </li>
-          <li>
-            <a href="projects/turt/turt.html">Turt</a>
+            <a href="projects/talk/talk.html">Talk</a>
           </li>
           <li>
             <a href="projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
@@ -188,10 +185,13 @@
             <a href="projects/pysics/pysics.html">Pysics</a>
           </li>
           <li>
+            <a href="projects/minesweeper/minesweeper.html">Minesweeper</a>
+          </li>
+          <li>
             <a href="projects/textfighter/textfighter.html">Text Fighter</a>
           </li>
           <li>
-            <a href="projects/talk/talk.html">Talk</a>
+            <a href="projects/tetris/tetris.html">Tetris</a>
           </li>
         </ul>
       </div>
