Updated to use headshot of me

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <div id="primary">
   <div class="content_container" id="intro">
     <a href="https://www.linkedin.com/in/seanmjohns1/" title="linkedin">
-      <img id="profile" src="images/github-profile.png" alt="github profile"></img>
+      <img id="profile" src="images/headshot.png" alt="github profile"></img>
     </a>
     <span id="desc">I am an incoming Georgia Institute of Technology student who will major in computer science. I have been programming since age ten, and I will continue to do so as a software engineer for the rest of my life. My current focus is around Systems and Architecture as well as Information Internetworks.</span>
   </div>
@@ -141,7 +141,7 @@
   <div id="centered">
     <div id="footer-left">
       <div id="footer-picture">
-        <img id="footer-image" src="images/github-profile.png" width="75px" height="75px" />
+        <img id="footer-image" src="images/headshot.png" width="75px" height="75px" />
       </div>
       <div id="footer-contact">
         <ul id="footer-contact-images">
