--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
   <div id="centered">
     <div id="footer-left">
       <div id="footer-picture">
-        <img id="footer-image" src="images/github-profile.png" width="75px" height="75px" />
+        <img id="footer-image" src="images/headshot.png" width="75px" height="75px" />
       </div>
       <div id="footer-contact">
         <ul id="footer-contact-images">
