Updated description about me

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <a href="https://www.linkedin.com/in/seanmjohns1/" title="linkedin">
       <img id="profile" src="images/headshot.png" alt="github profile"></img>
     </a>
-    <span id="desc">I am an incoming Georgia Institute of Technology student who will major in computer science. I have been programming since age ten, and I will continue to do so as a software engineer for the rest of my life. My current focus is around Systems and Architecture as well as Information Internetworks.</span>
+    <span id="desc">I am a first-year Georgia Institute of Technology student majoring in computer science. I have been programming since age ten, and I will continue to do so as a software engineer for the rest of my life. My current focus is around Information Internetworks as well as Systems and Architecture.</span>
   </div>
   <h2 id="projects_header">
     <a href="https://github.com/seanmjohns?tab=repositories">Projects</a>
