--- a/projects/turt/turt.html
+++ b/projects/turt/turt.html
@@ -14,15 +14,15 @@
   <div id="projects-dropdown" class="nav">
     <button id="projects-dropdown-button" class="nav-button" onclick="toggle()">Projects</button>
     <div class="projects-dd-content" id="dropdown-content">
-      <a class="project-link" href="../../projects/dodger/dodger.html">Dodger</a>
-      <a class="project-link" href="../../projects/tetris/tetris.html">Tetris</a>
-      <a class="project-link" href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
       <a class="project-link" href="../../projects/turt/turt.html">Turt</a>
+      <a class="project-link" href="../../projects/dodger/dodger.html">Dodger</a>
+      <a class="project-link" href="../../projects/talk/talk.html">Talk</a>
       <a class="project-link" href="../../projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
       <a class="project-link" href="../../projects/calc/calc.html">Calc</a>
       <a class="project-link" href="../../projects/pysics/pysics.html">Pysics</a>
+      <a class="project-link" href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
       <a class="project-link" href="../../projects/textfighter/textfighter.html">Text Fighter</a>
-      <a class="project-link" href="../../projects/talk/talk.html">Talk</a>
+      <a class="project-link" href="../../projects/tetris/tetris.html">Tetris</a>
     </div>
   </div>
   <div class="nav">
@@ -94,14 +94,13 @@
       <div id="image-number-container">
         <span id="image-number">0 / 0</span>
       </div>
-      <img class="gallery-image" src="gallery/set_link_only.png"></img>
-      <img class="gallery-image" src="gallery/.DS_Store"></img>
       <img class="gallery-image" src="gallery/direct_message_warn.png"></img>
       <img class="gallery-image" src="gallery/warned.png"></img>
-      <img class="gallery-image" src="gallery/direct_message_banned.png"></img>
       <img class="gallery-image" src="gallery/set_election_channel.png"></img>
+      <img class="gallery-image" src="gallery/direct_message_banned.png"></img>
       <img class="gallery-image" src="gallery/banned_for_warnings.png"></img>
       <img class="gallery-image" src="gallery/election.png"></img>
+      <img class="gallery-image" src="gallery/set_link_only.png"></img>
       <span id="no-images">It looks like we have no images for this project.</span>
     </div>
     <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
@@ -112,7 +111,7 @@
   <div id="centered">
     <div id="footer-left">
       <div id="footer-picture">
-        <img id="footer-image" src="../../images/github-profile.png" width="75px" height="75px" />
+        <img id="footer-image" src="../../images/headshot.png" width="75px" height="75px" />
       </div>
       <div id="footer-contact">
         <ul id="footer-contact-images">
@@ -138,16 +137,13 @@
         <span id="footer-projects-header">Projects</span>
         <ul id="footer-projects-list">
           <li>
+            <a href="../../projects/turt/turt.html">Turt</a>
+          </li>
+          <li>
             <a href="../../projects/dodger/dodger.html">Dodger</a>
           </li>
           <li>
-            <a href="../../projects/tetris/tetris.html">Tetris</a>
-          </li>
-          <li>
-            <a href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
-          </li>
-          <li>
-            <a href="../../projects/turt/turt.html">Turt</a>
+            <a href="../../projects/talk/talk.html">Talk</a>
           </li>
           <li>
             <a href="../../projects/sub_trouble/sub_trouble.html">Sub Trouble</a>
@@ -159,10 +155,13 @@
             <a href="../../projects/pysics/pysics.html">Pysics</a>
           </li>
           <li>
+            <a href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
+          </li>
+          <li>
             <a href="../../projects/textfighter/textfighter.html">Text Fighter</a>
           </li>
           <li>
-            <a href="../../projects/talk/talk.html">Talk</a>
+            <a href="../../projects/tetris/tetris.html">Tetris</a>
           </li>
         </ul>
       </div>
