--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a class="project-link" href="projects/calc/calc.html">Calc</a>
       <a class="project-link" href="projects/pysics/pysics.html">Pysics</a>
       <a class="project-link" href="projects/minesweeper/minesweeper.html">Minesweeper</a>
+      <a class="project-link" href="projects/quickquiz/quickquiz.html">QuickQuiz</a>
       <a class="project-link" href="projects/textfighter/textfighter.html">Text Fighter</a>
       <a class="project-link" href="projects/tetris/tetris.html">Tetris</a>
     </div>
@@ -118,6 +119,15 @@
       </a>
     </div>
     <div class="content_container project_container">
+      <a href="projects/quickquiz/quickquiz.html">
+        <div class="project-desc-container">
+          <span class="project_name">QuickQuiz</span>
+          <span class="project_desc">Quick Review</span>
+        </div>
+        <img src="projects/quickquiz/quickquiz.png"></img>
+      </a>
+    </div>
+    <div class="content_container project_container">
       <a href="projects/textfighter/textfighter.html">
         <div class="project-desc-container">
           <span class="project_name">Text Fighter</span>
@@ -186,6 +196,9 @@
           </li>
           <li>
             <a href="projects/minesweeper/minesweeper.html">Minesweeper</a>
+          </li>
+          <li>
+            <a href="projects/quickquiz/quickquiz.html">QuickQuiz</a>
           </li>
           <li>
             <a href="projects/textfighter/textfighter.html">Text Fighter</a>
