--- a/projects/quickquiz/quickquiz.html
+++ b/projects/quickquiz/quickquiz.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>Talk - Sean Johnson</title>
+  <title>QuickQuiz - Sean Johnson</title>
   <meta name="viewport" content="width=device-width" charset="UTF-8"></meta>
   <script type="text/javascript" src="../../stickynav.js"></script>
   <link rel="stylesheet" href="../../navbar.css"></link>
@@ -46,13 +46,13 @@
           }</script>
 <div id="primary">
   <h2 id="project-name">
-    <a href="https://github.com/seanmjohns/Talk">Talk</a>
+    <a href="https://github.com/SMHS-TSA/QuickQuiz-Desktop">QuickQuiz</a>
   </h2>
   <div class="content-container" id="intro">
-    <a href="https://github.com/seanmjohns/Talk">
-      <img id="project-img" src="talk.png"></img>
+    <a href="https://github.com/SMHS-TSA/QuickQuiz-Desktop">
+      <img id="project-img" src="quickquiz.png"></img>
     </a>
-    <span id="project-desc">Talk is a simple server based chat system. Users communicate on a linux and macos only text-based environment. There is no running dedicated server, so if you wish to use it, you must run a server yourself.</span>
+    <span id="project-desc">QuickQuiz is an application that assists students in learning course content through multiple choice and short answer questions.</span>
   </div>
   <div id="technical-info">
     <div class="content-container" id="download">
@@ -60,11 +60,11 @@
       <div class="container-body">
         <div id="source">
           <span id="source-header">Source</span>
-          <a href="https://github.com/seanmjohns/Talk/releases">Github</a>
+          <a href="https://github.com/SMHS-TSA/QuickQuiz-Desktop/releases">Github</a>
         </div>
         <div id="precompiled">
           <span id="precompiled-header">Compiled</span>
-          <a>-</a>
+          <a href="https://seanmjohns.github.io/projects/quickquiz/-">-</a>
         </div>
       </div>
     </div>
@@ -72,8 +72,7 @@
       <span class="subheader" id="requirements-header">Requirements</span>
       <div class="container-body">
         <ul>
-          <li>Linux or MacOs</li>
-          <li>ncurses</li>
+          <li>Java 11</li>
         </ul>
       </div>
     </div>
@@ -85,12 +84,6 @@
       <div id="image-number-container">
         <span id="image-number">0 / 0</span>
       </div>
-      <img class="gallery-image" src="gallery/help.png"></img>
-      <img class="gallery-image" src="gallery/newroom.png"></img>
-      <img class="gallery-image" src="gallery/namechange.png"></img>
-      <img class="gallery-image" src="gallery/leave.png"></img>
-      <img class="gallery-image" src="gallery/makeroom.png"></img>
-      <img class="gallery-image" src="gallery/users.png"></img>
       <span id="no-images">It looks like we have no images for this project.</span>
     </div>
     <button id="right-button" class="gallery-button" onclick="goRight()"> &gt; </button>
