--- a/projects/sub_trouble/sub_trouble.html
+++ b/projects/sub_trouble/sub_trouble.html
@@ -21,6 +21,7 @@
       <a class="project-link" href="../../projects/calc/calc.html">Calc</a>
       <a class="project-link" href="../../projects/pysics/pysics.html">Pysics</a>
       <a class="project-link" href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
+      <a class="project-link" href="../../projects/quickquiz/quickquiz.html">QuickQuiz</a>
       <a class="project-link" href="../../projects/textfighter/textfighter.html">Text Fighter</a>
       <a class="project-link" href="../../projects/tetris/tetris.html">Tetris</a>
     </div>
@@ -142,6 +143,9 @@
           </li>
           <li>
             <a href="../../projects/minesweeper/minesweeper.html">Minesweeper</a>
+          </li>
+          <li>
+            <a href="../../projects/quickquiz/quickquiz.html">QuickQuiz</a>
           </li>
           <li>
             <a href="../../projects/textfighter/textfighter.html">Text Fighter</a>
